update version on wallet and deposit service